fix(grid): change row-gap_half modifier

--- a/src/blocks/skeleton/grid/_row-gap/grid_row-gap_half.scss
+++ b/src/blocks/skeleton/grid/_row-gap/grid_row-gap_half.scss
@@ -1,3 +1,3 @@
 .grid_row-gap_half {
-  grid-row-gap: calc(var(--gap));
+  grid-row-gap: calc(var(--gap) / 2);
 }
